# hyrax_regression_tests

./: .gitignore  .travis.yml  Makefile.am  README.md  aclocal.m4  config.status  configure  configure.ac  curl_test_macros.m4  get_edl_token.sh  show_fails  testGrind  testsuite.at  testsuite_dmrpp_builder.at
builddmrpp/: ghrsst_cmr_dmrpp.dap.baseline  ghrsst_cmr_dmrpp_response  ghrsst_cmr_dmrpp_response.baseline
dap2_ssfunc/: 1998-6-avhrr.dat_DateTimeConstraint_01.ascii  1998-6-avhrr.dat_DateTimeConstraint_01.das  1998-6-avhrr.dat_DateTimeConstraint_01.dds  1998-6-avhrr.dat_DateTimeConstraint_01.dods  1998-6-avhrr.dat_DateTimeConstraint_01.html  1998-6-avhrr.dat_DateTimeConstraint_01.html.baseline  1998-6-avhrr.dat_DateTimeConstraint_01.info  1998-6-avhrr.dat_DateTimeRange_01.ascii  1998-6-avhrr.dat_DateTimeRange_01.das  1998-6-avhrr.dat_DateTimeRange_01.dds  1998-6-avhrr.dat_DateTimeRange_01.dods  1998-6-avhrr.dat_DateTimeRange_01.html  1998-6-avhrr.dat_DateTimeRange_01.html.baseline  1998-6-avhrr.dat_DateTimeRange_01.html.http_header  1998-6-avhrr.dat_DateTimeRange_01.info  coads_climatology.nc_geogrid-Basic.ascii  coads_climatology.nc_geogrid-Basic.das  coads_climatology.nc_geogrid-Basic.dds  coads_climatology.nc_geogrid-Basic.dods  coads_climatology.nc_geogrid-Basic.html  coads_climatology.nc_geogrid-Basic.html.baseline  coads_climatology.nc_geogrid-Basic.info  coads_climatology.nc_geogrid-TimeSelect.ascii  coads_climatology.nc_geogrid-TimeSelect.das  coads_climatology.nc_geogrid-TimeSelect.dds  coads_climatology.nc_geogrid-TimeSelect.dods  coads_climatology.nc_geogrid-TimeSelect.html  coads_climatology.nc_geogrid-TimeSelect.html.baseline  coads_climatology.nc_geogrid-TimeSelect.info  coads_climatology.nc_geogrid-WholeArray.ascii  coads_climatology.nc_geogrid-WholeArray.das  coads_climatology.nc_geogrid-WholeArray.dds  coads_climatology.nc_geogrid-WholeArray.dods  coads_climatology.nc_geogrid-WholeArray.html  coads_climatology.nc_geogrid-WholeArray.html.baseline  coads_climatology.nc_geogrid-WholeArray.info
errors/: BadConstraintSyntax.ascii  BadConstraintSyntax.ascii.baseline  BadConstraintSyntax.dap  BadConstraintSyntax.dap.baseline  BadConstraintSyntax.dap.csv  BadConstraintSyntax.dap.csv.baseline  BadConstraintSyntax.dds  BadConstraintSyntax.dds.baseline  BadConstraintSyntax.dmr  BadConstraintSyntax.dmr.baseline  BadConstraintSyntax.dmr.html  BadConstraintSyntax.dmr.html.baseline  BadConstraintSyntax.dods  BadConstraintSyntax.dods.baseline  BadConstraintSyntax.json  BadConstraintSyntax.json.baseline  BadConstraintSyntax.json.http_header  IncompatibleMediaType.w10n  IncompatibleMediaType.w10n.baseline.http_header  IncompatibleMediaType.w10n.http_header  NoSuchVariable.ascii  NoSuchVariable.ascii.baseline  NoSuchVariable.dap  NoSuchVariable.dap.baseline  NoSuchVariable.dap.csv  NoSuchVariable.dap.csv.baseline  NoSuchVariable.dap.csv.baseline.http_header  NoSuchVariable.dds  NoSuchVariable.dds.baseline  NoSuchVariable.dmr  NoSuchVariable.dmr.baseline  NoSuchVariable.dmr.html  NoSuchVariable.dmr.html.baseline  NoSuchVariable.dods  NoSuchVariable.dods.baseline  NoSuchVariable.json  NoSuchVariable.json.baseline  NoSuchVariable.w10n  NoSuchVariable.w10n.baseline  bes_forbidden_error.ascii  (+44 more)
ff/: 1998-6-avhrr.dat.ascii  1998-6-avhrr.dat.dap  1998-6-avhrr.dat.dap.baseline  1998-6-avhrr.dat.dap.csv  1998-6-avhrr.dat.das  1998-6-avhrr.dat.dds  1998-6-avhrr.dat.dmr  1998-6-avhrr.dat.dmr.html  1998-6-avhrr.dat.dmr.html.baseline  1998-6-avhrr.dat.dmr.xml  1998-6-avhrr.dat.dmr.xml.baseline  (+82 more)
(+123 files in other folders)
